--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
 	<title> FORM</title>
     <link rel="stylesheet" href="style.css">
     
@@ -54,6 +53,6 @@
           </div>
     </div>
 	
-    <script src="src.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
